# discord-updater

./: .gitignore  LICENSE  README.md  pyproject.toml
discord_updater/: discord_updater.py
